# othello_alphazero_cpp

./: .gitignore  CMakeLists.txt  README.en.md  README.md  autograd.cpp  autograd.h  build_wasm_othello.sh  game.cpp  game.h  main.cpp  mcts.cpp  mcts.h  net.cpp  net.h  pipeline.cpp  pipeline.h  play.cpp  wasm_othello.cpp
python/: README.en.md  README.md  autograd.py  game.py  main.py  mcts.py  net.py  pipeline.py  play.py
wasmdist/: index.html  othello.js  othello.wasm
